--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   transition: background-color 1.5s ease-in-out;
+  overflow: hidden;
 }
 
 button {
